[gd_scene load_steps=33 format=3 uid="uid://dt3ehbo6gh0nl"]

[ext_resource type="Script" path="res://scripts/playermove.gd" id="1_yf00g"]
[ext_resource type="Texture2D" uid="uid://c8m7t13xgncph" path="res://assets/sprites/rubicdeathtemplate1.png" id="2_5oauv"]
[ext_resource type="Texture2D" uid="uid://bv400r4uh8xqh" path="res://assets/sprites/jumpanddashtemplate1.png" id="2_dli2v"]
[ext_resource type="Texture2D" uid="uid://ebgcknlbmefy" path="res://assets/sprites/rubicrun1.png" id="3_bmuej"]
[ext_resource type="Texture2D" uid="uid://b2jn7853u6mr4" path="res://assets/sprites/rubicidleanimation22.png" id="3_sen46"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btxj1"]
size = Vector2(18, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwn6o"]
atlas = ExtResource("2_dli2v")
region = Rect2(3, 44, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdv10"]
atlas = ExtResource("2_dli2v")
region = Rect2(32, 44, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_87arg"]
atlas = ExtResource("2_dli2v")
region = Rect2(61, 44, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yc2a"]
atlas = ExtResource("2_dli2v")
region = Rect2(90, 44, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkdww"]
atlas = ExtResource("2_5oauv")
region = Rect2(0, 1, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5x6k"]
atlas = ExtResource("2_5oauv")
region = Rect2(29, 1, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5osab"]
atlas = ExtResource("2_5oauv")
region = Rect2(58, 1, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0esc"]
atlas = ExtResource("2_5oauv")
region = Rect2(87, 1, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uttul"]
atlas = ExtResource("2_5oauv")
region = Rect2(116, 1, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmfef"]
atlas = ExtResource("2_5oauv")
region = Rect2(145, 1, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bx3b"]
atlas = ExtResource("3_sen46")
region = Rect2(0, 7, 20, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecf34"]
atlas = ExtResource("3_sen46")
region = Rect2(20, 7, 20, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl75o"]
atlas = ExtResource("2_dli2v")
region = Rect2(3, 8, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_38g3t"]
atlas = ExtResource("2_dli2v")
region = Rect2(31, 8, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgdjk"]
atlas = ExtResource("2_dli2v")
region = Rect2(59, 8, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_an4cf"]
atlas = ExtResource("2_dli2v")
region = Rect2(87, 8, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3ek1"]
atlas = ExtResource("2_dli2v")
region = Rect2(115, 8, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_73cy5"]
atlas = ExtResource("3_bmuej")
region = Rect2(0, 6, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4gjn"]
atlas = ExtResource("3_bmuej")
region = Rect2(28, 6, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_il2gs"]
atlas = ExtResource("3_bmuej")
region = Rect2(56, 6, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufok4"]
atlas = ExtResource("3_bmuej")
region = Rect2(84, 6, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_apg7g"]
atlas = ExtResource("3_bmuej")
region = Rect2(112, 6, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hxo0"]
atlas = ExtResource("3_bmuej")
region = Rect2(140, 6, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpn7f"]
atlas = ExtResource("3_bmuej")
region = Rect2(168, 6, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_loddl"]
atlas = ExtResource("3_bmuej")
region = Rect2(196, 6, 28, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_78w6v"]
animations = [{
"frames": [{
"duration": 0.05,
"texture": SubResource("AtlasTexture_vwn6o")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_rdv10")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_87arg")
}, {
"duration": 15.0,
"texture": SubResource("AtlasTexture_2yc2a")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_tkdww")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_h5x6k")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_5osab")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_c0esc")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_uttul")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_fmfef")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 2.2,
"texture": SubResource("AtlasTexture_3bx3b")
}, {
"duration": 2.2,
"texture": SubResource("AtlasTexture_ecf34")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.05,
"texture": SubResource("AtlasTexture_tl75o")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_38g3t")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_dgdjk")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_an4cf")
}, {
"duration": 15.0,
"texture": SubResource("AtlasTexture_s3ek1")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_73cy5")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_e4gjn")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_il2gs")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_ufok4")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_apg7g")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_7hxo0")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_jpn7f")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_loddl")
}],
"loop": true,
"name": &"running",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_yf00g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-75, -59.5)
shape = SubResource("RectangleShape2D_btxj1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-76, -61)
scale = Vector2(1.55, 1.51442)
sprite_frames = SubResource("SpriteFrames_78w6v")
animation = &"jump"
autoplay = "idle"
frame_progress = 0.812727
flip_h = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="ReloadTimer" type="Timer" parent="."]

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
